--- a/mainpage.css
+++ b/mainpage.css
@@ -2,21 +2,58 @@
     padding: 0;
 }
 
-#homeIcon{
-    width: 2rem;
-    height: 2rem;
+#backgroud, html, body {
+    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Noto Sans,Ubuntu,Droid Sans,Helvetica Neue,sans-serif;
+    height: 100%;
 }
 
-#divHomeIcon{
-    width: 2.2rem;
-    height: 2.2rem;
+#background {
+    background-color: rgb(0, 121, 191);
+    /* background-color: rgb(81, 152, 57); */
+    height: 100%;
+}
+.navbar {
+    background-color: rgba(0, 0, 100, 0.2);
+    padding: 0.3rem;
+}
+.nav-item {
+    background-color: transparent;
+}
+
+#homeIcon{
+    width: 2.3rem;
+    height: 2.3rem;
+    padding: 0.3rem;
+    border-radius: 0.1rem;
+    background-color: rgba(255, 255, 255, 0.30);
 }
 
 #homeIcon:hover{
-    width: 2.2rem;
-    height: 2.2rem;
+    background-color: rgba(255, 255, 255, 0.15);
     cursor: pointer;
 }
-.navbar-collapse {
+
+button#menuUser {
     justify-content: flex-end;
+    padding: 0;
+    border: none;
+    background-color: inherit;
+
+}
+
+#divMenuUser{
+    background-color: transparent;
+    overflow: hidden;
+}
+
+#divMenuUser span {
+    display: inline-flex;
+    width: 2.3rem;
+    height: 2.3rem;
+    border-radius: 100%;
+    align-items: center;
+    font-weight: bold;
+    justify-content: center;
+    font-size: 1.1rem;
+    background-color: #dfe1e6;
 }
