--- a/login.css
+++ b/login.css
@@ -1,3 +1,7 @@
+html, body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    height: 100%;
+}
 /* Div e Form LOGIN e Cadastro */
     #formLogin,#formCadastro {
         font-size: 1.6em;
