--- a/mainpage.css
+++ b/mainpage.css
@@ -1,3 +1,4 @@
+/* Div Princinpais */
 #mainContainer{
     padding: 0;
 }
@@ -7,11 +8,13 @@
     height: 100%;
 }
 
-#background {
+#background { /* div para mundar cor de fundo */
     /* background-color: rgb(0, 121, 191); */
     /* background-color: rgb(81, 152, 57); */
     height: 100%;
 }
+
+/* NAV BAR DE NAV-ITENS */
 .navbar {
     background-color: rgba(0, 0, 100, 0.2);
     padding: 0.3rem;
@@ -66,6 +69,44 @@ button#menuUser {
     height: 100% !important;
 }
 
-div.col {
+/* QUADROS */
+.list-group-item{
+    border: 0;
+    padding-left: 0;
+}
 
+#criarQuadro {
+    background-color:#f5f7fa;
+    display: inline-flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+#criarQuadro span{
+    color: black;
+    font-weight: normal;
+    text-align: center;
+    margin: 0;
+}
+#criarQuadro div{
+    margin: auto;
+    align-self: center;
+    justify-self: a;
+}
+.quadro {
+    /* width: 12rem; */
+    height: 6rem;
+    border-radius: 0.3rem; 
+    cursor: pointer;
+}
+.quadro span{
+    color: white;
+    font-weight: bold;
+    margin-top: 0.6rem;
+    margin-left: 0.6rem;
+}
+
+#divMeusQuadros{
+    margin-top: 3rem;
+    margin-bottom: 3rem;
 }
