--- a/board/board.css
+++ b/board/board.css
@@ -9,8 +9,6 @@
 }
 
 #background { /* div para mundar cor de fundo */
-    /* background-color: rgb(0, 121, 191); */
-    /* background-color: rgb(81, 152, 57); */
     height: 100%;
 }
 
@@ -62,51 +60,12 @@ button#menuUser {
     background-color: #dfe1e6;
 }
 
-#divUserHome{
-    background-color: white;
-    position: absolute;
-    width: 100% !important;
-    height: 100% !important;
-}
-
-/* QUADROS */
-.list-group-item{
-    border: 0;
-    padding-left: 0;
-}
-
-#criarQuadro {
-    background-color:#f5f7fa;
-    display: inline-flex;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-}
-#criarQuadro span{
-    color: black;
-    font-weight: normal;
-    text-align: center;
+/*dropdown menu*/
+#H6Name{
     margin: 0;
 }
-#criarQuadro div{
-    margin: auto;
-    align-self: center;
-    justify-self: a;
-}
-.quadro {
-    /* width: 12rem; */
-    height: 6rem;
-    border-radius: 0.3rem; 
-    cursor: pointer;
-}
-.quadro span{
-    color: white;
-    font-weight: bold;
-    margin-top: 0.6rem;
-    margin-left: 0.6rem;
-}
 
-#divMeusQuadros{
-    margin-top: 3rem;
-    margin-bottom: 3rem;
+#divUserName{
+    padding-bottom: 0.5rem;
+    margin: 0 0.3rem 0.3rem;
 }
