--- a/user/mainpage.css
+++ b/user/mainpage.css
@@ -27,13 +27,22 @@
     width: 2.3rem;
     height: 2.3rem;
     padding: 0.3rem;
-    margin-left: 0.3rem;
     border-radius: 0.1rem;
     background-color: rgba(255, 255, 255, 0.30);
 }
 
 #homeIcon:hover{
     background-color: rgba(255, 255, 255, 0.15);
+    cursor: pointer;
+}
+
+#logo img{
+    filter: opacity(70%);
+    height: 1.5rem;
+    width: 4.5rem;
+}
+#logo img:hover{
+    filter: opacity(90%);
     cursor: pointer;
 }
 
