--- a/user/mainpage.css
+++ b/user/mainpage.css
@@ -96,7 +96,7 @@ button#menuUser {
 }
 
 #criarQuadro {
-    background-color:#f5f7fa;
+    background-color:#ebecee;
     display: inline-flex;
     width: 100%;
     justify-content: center;
