--- a/board/board.css
+++ b/board/board.css
@@ -163,5 +163,32 @@ button#menuUser {
 }
 
 /* Listas */
+#listaDeListas{
+    max-height: 89%;
+    height: 100%;
+}
 
+#divCriarLista {
+    height: 4rem;
+    border-radius: 0.3rem;
+    -webkit-user-select: none;
+    -webkit-touch-callout:none; 
+    -moz-user-select:none; 
+    -ms-user-select:none; 
+    user-select:none;     
+    cursor: pointer;
+    background-color:#ebecee;
+    display: inline-flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
 
+.lista {
+    max-height: 95%;
+    min-height: 15%;
+    height: 15%;
+    background-color: white;
+    border-radius: 0.25rem;
+    margin-right: 0.5rem
+}
