--- a/board/board.css
+++ b/board/board.css
@@ -76,6 +76,15 @@ button#menuUser {
     padding: 0;
 }
 
+/*Texto não selscionavel*/
+.text-nao-selecionavel{
+    -webkit-user-select: none;
+    -webkit-touch-callout:none; 
+    -moz-user-select:none; 
+    -ms-user-select:none; 
+    user-select:none; 
+}
+
 /*dropdown menu*/
 #H6Name{
     margin: 0;
@@ -110,9 +119,6 @@ button#menuUser {
     background-color:rgba(255, 255, 255, 0.20);
 }
 
-.form-control{
-    width: auto;
-}
 #changeName {
     display: none;
     width: 4rem;
@@ -125,6 +131,7 @@ button#menuUser {
     position: absolute;
     padding-right: 1.5rem !important;
     visibility: hidden;
+    width: auto;
 }
 
 #changeName,
@@ -177,26 +184,27 @@ button#menuUser {
     margin: 0rem 0.5rem 1rem 0;
     padding: 0.5rem;
     overflow-y: auto;
-    background-color: rgb(255, 255, 255);
+    overflow-x: hidden;
+    background-color:#ebecf0;
 }
 
 .divNomeLista {
     border-radius: 0.25rem;
-    padding: 0.3rem;
+    padding: 0.3rem 0.3rem 0 0.3rem ;
     display: flex;
     justify-content: space-between;
-    background-color: #e9e9e9;
+    background-color: transparent;
 }
 
 .nome-lista{
     font-weight: 600;
 }
 
-.card {
+.lista .card {
     margin-top: 0.5rem;
     padding: 0.3rem;
-    background-color: #e9e9e9;
     border: none;
+    box-shadow: 0 1px 0 rgba(9,30,66,.25);
 }
 .card .card{ 
     margin: 0;
@@ -204,7 +212,7 @@ button#menuUser {
     height: 0.5rem;
 }
 
-/* CRIAR LISTA = CRIAR QUADRO*/
+/* CRIAR LISTA */
 
 #divCriarLista {
     display: inline-block;
@@ -215,17 +223,8 @@ button#menuUser {
     max-width: 100%;
     overflow: hidden;
     justify-content: center;
-    align-items: center;
-    -webkit-user-select: none;
-    -webkit-touch-callout:none; 
-    -moz-user-select:none; 
-    -ms-user-select:none; 
-    user-select:none;     
+    align-items: center;    
     cursor: pointer;
-}
-
-#divFormList{
-    
 }
 
 #cardAddList{
@@ -234,10 +233,12 @@ button#menuUser {
     width: 100%;
     margin: 0;
     background-color: white;
+    padding: 0.5rem;
 }
 
 #cardAddList span{
     text-align: center;
+    font-weight: 600;
 }
 
 #formNovaLista{
@@ -246,15 +247,10 @@ button#menuUser {
     margin: auto;
 }
 
-#nomeDaLista{
+#inputNomeDaLista{
     color: black;
     font-weight: 500;
     box-sizing: border-box;
-}
-
-#novaLista{
-    color: white;
-    margin: auto;   
 }
 
 #btnCriarLista{
@@ -265,7 +261,19 @@ button#menuUser {
     display: block;
 }
 
-#btnCriarLista:disabled{
-    background-color: #f4f5f7;
-    color: #a5adba;
+#btnCriarCard{
+    width: auto;
+    background-color: #007bff;
+    color: rgb(255, 255, 255);
+    font-weight: 500;
+    display: block;
+}
+
+/*Criar Cards*/
+
+.add-card {
+    background-color: transparent;
+    box-shadow: none !important;
+    color: #5e6c84;
+    cursor: pointer;
 }
