--- a/board/board.css
+++ b/board/board.css
@@ -36,12 +36,12 @@
 }
 
 #logo img{
-    filter: opacity(70%);
+    filter: opacity(80%);
     height: 1.5rem;
     width: 4.5rem;
 }
 #logo img:hover{
-    filter: opacity(90%);
+    filter: opacity(100%);
     cursor: pointer;
 }
 
@@ -119,7 +119,7 @@ button#menuUser {
     background-color:rgba(255, 255, 255, 0.20);
 }
 
-#changeName {
+#inputNomeQuadro {
     display: none;
     width: 4rem;
     min-width: 4rem;
@@ -134,7 +134,7 @@ button#menuUser {
     width: auto;
 }
 
-#changeName,
+#inputNomeQuadro,
 #spanSize {
     margin: 0;
     white-space: pre;
@@ -171,7 +171,7 @@ button#menuUser {
 
 /* Listas */
 #allListas{
-    max-height: 89%;
+    max-height: 83%;
 }
 
 .lista {
@@ -182,7 +182,7 @@ button#menuUser {
     background-color: transparent;
     border-radius: 0.25rem;
     margin: 0rem 0.5rem 1rem 0;
-    padding: 0.5rem;
+    padding: 0.5rem 0.5rem 0.5rem 0.5rem;
     overflow-y: auto;
     overflow-x: hidden;
     background-color:#ebecf0;
@@ -191,25 +191,27 @@ button#menuUser {
 .divNomeLista {
     border-radius: 0.25rem;
     padding: 0.3rem 0.3rem 0 0.3rem ;
-    display: flex;
-    justify-content: space-between;
+    margin-bottom: 0.6rem;
     background-color: transparent;
+    word-wrap: break-word;
 }
 
 .nome-lista{
     font-weight: 600;
 }
 
-.lista .card {
-    margin-top: 0.5rem;
-    padding: 0.3rem;
+ .card {
+    margin-bottom: 0.5rem;
+    padding: 0.3rem 0.5rem;
     border: none;
-    box-shadow: 0 1px 0 rgba(9,30,66,.25);
+    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.4);
+    cursor: pointer;
 }
-.card .card{ 
-    margin: 0;
-    width: 50%;
-    height: 0.5rem;
+
+.left {
+    right: 0;
+    top: 0;
+    padding: 0.5rem;
 }
 
 /* CRIAR LISTA */
@@ -227,16 +229,25 @@ button#menuUser {
     cursor: pointer;
 }
 
+.collapse,
+.collapsing{
+    background-color: white;
+    border-radius: 0.25rem;
+    padding: 0.7rem 0.5rem;
+}
+
 #cardAddList{
     min-height: 2rem;
     height: 100%;
     width: 100%;
     margin: 0;
-    background-color: white;
-    padding: 0.5rem;
+    background-color: rgba(255, 255, 255, 0.39);
+    padding: 0;
+    box-shadow: none;
 }
 
 #cardAddList span{
+    padding: 0.5rem 0 0.5rem;
     text-align: center;
     font-weight: 600;
 }
@@ -276,4 +287,21 @@ button#menuUser {
     box-shadow: none !important;
     color: #5e6c84;
     cursor: pointer;
+    margin: 0;
+    padding: 0;
+}
+
+.span-Add-Card {
+    text-align: center;
+    font-weight: bold;
+    font-size: 0.8rem;
+    padding: 0.3rem;
+}
+
+.btn-Criar-Card {
+    width: auto;
+    background-color: #007bff !important;
+    color: white !important;
+    font-weight: 500;
+    display: block;
 }
