--- a/user/mainpage.css
+++ b/user/mainpage.css
@@ -83,7 +83,6 @@ button#menuUser {
 
 #divUserHome{
     background-color: white;
-    position: absolute;
     width: 100% !important;
     height: 100% !important;
     padding: 0;
@@ -96,7 +95,7 @@ button#menuUser {
 }
 
 #criarQuadro {
-    background-color:#ebecee;
+    background-color:#e6e6e6;
     display: inline-flex;
     width: 100%;
     justify-content: center;
@@ -104,7 +103,7 @@ button#menuUser {
 }
 #criarQuadro span{
     color: black;
-    font-weight: normal;
+    font-weight: 600;
     text-align: center;
     margin: 0;
 }
@@ -168,14 +167,14 @@ button#menuUser {
 #novoQuadrobg{
     display: none;
     width: 100%;
+    height: 100%;
     margin: 0;
     background-color: rgba(0, 0, 0, 0.75);
     z-index: 1;
 }
 
 #novoQuadro{
-    color: white;
-    margin: auto;   
+    color: white;  
 }
 
 #btnCriarQuadro{
@@ -184,11 +183,6 @@ button#menuUser {
     color: rgb(255, 255, 255);
     font-weight: 500;
     display: block;
-}
-
-#btnCriarQuadro:disabled{
-    background-color: #f4f5f7;
-    color: #a5adba;
 }
 
 #quadroANDcores{
@@ -209,7 +203,6 @@ button#menuUser {
     margin-left: 0.5rem;
     margin-bottom: 0;
     display: inline-flex;
-    width: 30%;
     padding: 0;
     flex-wrap: wrap;
     vertical-align: top;
