--- a/user/mainpage.css
+++ b/user/mainpage.css
@@ -135,6 +135,19 @@ button#menuUser {
     margin-bottom: 3rem;
 }
 
+/* DISPLAY NONE OR BLOCK */
+.display-none {
+    display: none !important;
+}
+
+.display-block {
+    display: block !important;
+}
+
+.display-flex {
+    display: flex !important;
+}
+
 /* criar novo quadro*/
 #formNovoQuadro{
     width: auto;
@@ -165,7 +178,6 @@ button#menuUser {
 }
 
 #novoQuadrobg{
-    display: none;
     width: 100%;
     height: 100%;
     margin: 0;
