--- a/board/board.css
+++ b/board/board.css
@@ -217,7 +217,11 @@ button#menuUser {
     max-height: 1.3rem;
     max-width: 1.3rem;
 }
-
+@media(max-width: 576px){
+    .lista {
+        margin: 0rem 0rem 1rem 0 !important;
+    }
+}
 .lista {
     display: flex;
     max-height: 40rem;
